@@ -10,6 +10,7 @@ import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.ParameterizedType;
 import java.math.BigDecimal;
+import java.math.BigInteger;
 import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
@@ -33,7 +34,7 @@ import org.xml.sax.SAXException;
 public final class GenericDao {
 
     private static JdbcFactory jdbcFactory;
-    private static Map<Class, List> cache;
+    private static Map<Class<?>, List<?>> cache;
 
     private final String databaseId;
     private CriteriaBuilder criteriaBuilder;
@@ -51,17 +52,20 @@ public final class GenericDao {
         } else if (field.isAnnotationPresent(JoinColumn.class)) {
             boolean escaped = ((JoinColumn) (field.getAnnotation(JoinColumn.class))).caseSensitive();
             if (escaped) {
-                result = escapeCharacter + ((JoinColumn) (field.getAnnotation(JoinColumn.class))).name() + escapeCharacter;
+                result = escapeCharacter + ((JoinColumn) (field.getAnnotation(JoinColumn.class))).name()
+                        + escapeCharacter;
             } else {
                 result = ((JoinColumn) (field.getAnnotation(JoinColumn.class))).name();
             }
+        } else if (field.isAnnotationPresent(ManyToMany.class)) {
+            result = ((ManyToMany) field.getAnnotation(ManyToMany.class)).joinColumn();
         } else {
             result = field.getName();
         }
         return result;
     }
 
-    private String getClassTableName(Class classe, String escapeCharacter) {
+    private String getClassTableName(Class<?> classe, String escapeCharacter) {
         String result = null;
         if (classe.isAnnotationPresent(Table.class)) {
             boolean escaped = ((Table) (classe.getAnnotation(Table.class))).caseSensitive();
@@ -80,35 +84,54 @@ public final class GenericDao {
         Connection connection = getConnection();
         connection.setAutoCommit(false);
         try {
-            int rowsUpdated = delete(connection, instance);
+            int rowsUpdated = delete(connection, instance, null, null);
             connection.commit();
             return rowsUpdated;
+        } catch (IllegalAccessException | IllegalArgumentException | SQLException e) {
+            connection.rollback();
+            throw e;
         } finally {
             connection.close();
         }
     }
 
-    public Object selectById(Object id) throws SQLException, InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException, NoSuchFieldException {
+    public Object selectById(Object id) throws SQLException, InstantiationException, IllegalAccessException,
+            IllegalArgumentException, InvocationTargetException, NoSuchFieldException {
         String tableName = getClassTableName(criteriaBuilder.getClazz(), this.dbCharacter);
         Field fieldHoldingId = getIdField(criteriaBuilder.getClazz());
-        String idColumnName = fieldHoldingId.isAnnotationPresent(Column.class) ? fieldHoldingId.getAnnotation(Column.class).name() : fieldHoldingId.getName();
+        String idColumnName = fieldHoldingId.isAnnotationPresent(Column.class)
+                ? fieldHoldingId.getAnnotation(Column.class).name()
+                : fieldHoldingId.getName();
         criteriaBuilder.add(Restrictions.eq(tableName, idColumnName, id), LogicalOperator.NONE);
-        return select(getConnection(), criteriaBuilder.getClazz(), criteriaBuilder).get(0);
+        Connection c = getConnection();
+        try {
+            return select(c, criteriaBuilder.getClazz(), criteriaBuilder, null, null).get(0);
+        } catch (SQLException | InstantiationException | IllegalAccessException | IllegalArgumentException
+                | InvocationTargetException | NoSuchFieldException e) {
+            throw e;
+        } finally {
+            c.close();
+        }
     }
 
-    private int delete(Connection connection, Object instance) throws IllegalArgumentException, IllegalAccessException, SQLException {
-        Class classe = instance.getClass();
+    // manualSql and psArgs are exclusively for ManyToMany
+    private int delete(Connection connection, Object instance, String manualSql, Object[] psArgs)
+            throws IllegalArgumentException, IllegalAccessException, SQLException {
+        Class<?> classe = instance.getClass();
         String tableName = getClassTableName(classe, this.dbCharacter);
         List<Field> fields = getAllFields(classe);
         Field fieldHoldingId = null;
         List<Field> oneToManyFields = new ArrayList<Field>();
-        Map<Field, Integer> generatedKeys = new HashMap<Field, Integer>();
+        List<Field> manyToManyFields = new ArrayList<Field>();
         for (Field field : fields) {
             if (field.isAnnotationPresent(Id.class)) {
                 fieldHoldingId = field;
             }
             if (field.isAnnotationPresent(OneToMany.class)) {
                 oneToManyFields.add(field);
+            }
+            if (field.isAnnotationPresent(ManyToMany.class)) {
+                manyToManyFields.add(field);
             }
         }
 
@@ -117,30 +140,76 @@ public final class GenericDao {
         }
 
         String fieldHoldingIdName = getFieldNameInDatabase(fieldHoldingId, this.dbCharacter);
-        String sql = "DELETE FROM " + tableName + " WHERE " + fieldHoldingIdName + " = ?";
+        String sql = null;
+        if (manualSql != null) {
+            sql = manualSql;
+        } else {
+            sql = "DELETE FROM " + tableName + " WHERE " + fieldHoldingIdName + " = ?";
+        }
 
         System.out.println(sql);
 
-        int rowsUpdated = 0;
-
         for (Field oneToManyField : oneToManyFields) {
             oneToManyField.setAccessible(true);
-            List list = (List) oneToManyField.get(instance);
+            List<?> list = (List<?>) oneToManyField.get(instance);
             if (list != null) {
                 for (Object object : list) {
-                    rowsUpdated += delete(connection, object);
+                    delete(connection, object, null, null);
+                }
+            }
+        }
+
+        for (Field manyToManyField : manyToManyFields) {
+            ParameterizedType genericType = (ParameterizedType) manyToManyField.getGenericType();
+            Class<?> genericTypeClass = (Class<?>) genericType.getActualTypeArguments()[0];
+            String joinTable = ((ManyToMany) manyToManyField.getAnnotation(ManyToMany.class)).joinTable();
+            String joinColumn = ((ManyToMany) manyToManyField.getAnnotation(ManyToMany.class)).joinColumn();
+            String inverseJoinColumn = ((ManyToMany) manyToManyField.getAnnotation(ManyToMany.class))
+                    .inverseJoinColumn();
+
+            Field mnyToManyFieldId = null;
+
+            for (Field field : getAllFields(genericTypeClass)) {
+                if (field.isAnnotationPresent(Id.class)) {
+                    mnyToManyFieldId = field;
+                    break;
+                }
+            }
+
+            if (mnyToManyFieldId == null) {
+                throw new RuntimeException("no Id found inside " + genericTypeClass);
+            }
+
+            manyToManyField.setAccessible(true);
+            mnyToManyFieldId.setAccessible(true);
+            fieldHoldingId.setAccessible(true);
+            List<?> list = (List<?>) manyToManyField.get(instance);
+            String manSql = "DELETE FROM " + joinTable + " WHERE " + joinTable + "." + joinColumn + " = ? AND "
+                    + joinTable + "." + inverseJoinColumn + " = ?";
+            Object[] prepArgs = new Object[2];
+            prepArgs[0] = fieldHoldingId.get(instance);
+            if (list != null) {
+                for (Object object : list) {
+                    prepArgs[1] = mnyToManyFieldId.get(object);
+                    delete(connection, object, manSql, prepArgs);
                 }
             }
         }
 
         PreparedStatement ps = connection.prepareStatement(sql);
         fieldHoldingId.setAccessible(true);
-        ps.setObject(1, fieldHoldingId.get(instance));
+        if (manualSql != null) {
+            for (int i = 0; i < psArgs.length; i++) {
+                ps.setObject(i + 1, psArgs[i]);
+            }
+        } else {
+            ps.setObject(1, fieldHoldingId.get(instance));
+        }
 
         return ps.executeUpdate();
     }
 
-    private Field getIdField(Class clazz) {
+    private Field getIdField(Class<?> clazz) {
         for (Field field : getAllFields(clazz)) {
             if (field.isAnnotationPresent(Id.class)) {
                 return field;
@@ -149,8 +218,11 @@ public final class GenericDao {
         return null;
     }
 
-    private Integer insert(Connection connection, Object instance) throws IllegalArgumentException, IllegalAccessException, SQLException, InstantiationException, InvocationTargetException, NoSuchFieldException {
-        Class classe = instance.getClass();
+    // manualSql and psArgs are exclusively for ManyToMany
+    private Integer insert(Connection connection, Object instance, String manualSql, Object[] psArgs)
+            throws IllegalArgumentException, IllegalAccessException, SQLException, InstantiationException,
+            InvocationTargetException, NoSuchFieldException {
+        Class<?> classe = instance.getClass();
 
         String tableName = getClassTableName(classe, this.dbCharacter);
 
@@ -159,6 +231,7 @@ public final class GenericDao {
         List<Field> oneToManyFields = new ArrayList<Field>();
         List<Field> manyToOneFields = new ArrayList<Field>();
         List<Field> syncFields = new ArrayList<Field>();
+        List<Field> manyToManyFields = new ArrayList<Field>();
         Map<Field, Integer> generatedKeys = new HashMap<Field, Integer>();
         for (Field field : fields) {
             if (field.isAnnotationPresent(Id.class)) {
@@ -174,7 +247,11 @@ public final class GenericDao {
             if (field.isAnnotationPresent(ManyToOne.class)) {
                 manyToOneFields.add(field);
             }
-            if (!field.isAnnotationPresent(Transient.class) && !field.isAnnotationPresent(OneToMany.class) && !field.isAnnotationPresent(ManyToOne.class)) {
+            if (field.isAnnotationPresent(ManyToMany.class)) {
+                manyToManyFields.add(field);
+            }
+            if (!field.isAnnotationPresent(Transient.class) && !field.isAnnotationPresent(OneToMany.class)
+                    && !field.isAnnotationPresent(ManyToOne.class) && !field.isAnnotationPresent(ManyToMany.class)) {
                 syncFields.add(field);
             }
         }
@@ -194,10 +271,11 @@ public final class GenericDao {
             Field fieldId = getIdField(manyToOneField.getType());
             fieldId.setAccessible(true);
             String fieldNameInQuery = getFieldNameInDatabase(fieldId, this.dbCharacter);
-            cb.add(Restrictions.eq(embeddedFieldTableName, fieldNameInQuery, fieldId.get(manyToOneInstance)), LogicalOperator.NONE);
-            List list = select(connection, manyToOneField.getType(), cb);
+            cb.add(Restrictions.eq(embeddedFieldTableName, fieldNameInQuery, fieldId.get(manyToOneInstance)),
+                    LogicalOperator.NONE);
+            List<?> list = select(connection, manyToOneField.getType(), cb, null, null);
             if (list.isEmpty()) {
-                generatedKeys.put(manyToOneField, insert(connection, manyToOneInstance));
+                generatedKeys.put(manyToOneField, insert(connection, manyToOneInstance, null, null));
             }
         }
 
@@ -247,6 +325,10 @@ public final class GenericDao {
 
         sql += ")";
 
+        if (manualSql != null) {
+            sql = manualSql;
+        }
+
         PreparedStatement preparedStatement = null;
         DatabaseInformation dbInfo = jdbcFactory.getDatabasesInformations().get(databaseId);
         String database = dbInfo.getUrl().split(":")[1];
@@ -256,38 +338,51 @@ public final class GenericDao {
             preparedStatement = connection.prepareStatement(sql, Statement.RETURN_GENERATED_KEYS);
         }
 
-        int index = 0;
-        for (Field syncField : syncFields) {
-            syncField.setAccessible(true);
-            preparedStatement.setObject(++index, syncField.get(instance));
+        if (manualSql == null) {
+            int index = 0;
+            for (Field syncField : syncFields) {
+                syncField.setAccessible(true);
+                preparedStatement.setObject(++index, syncField.get(instance));
+            }
+
+            for (Field manyToOneField : manyToOneFields) {
+                manyToOneField.setAccessible(true);
+                Object manyToOneInstance = manyToOneField.get(instance);
+                if (manyToOneInstance == null) {
+                    continue;
+                }
+                Field fieldId = getIdField(manyToOneField.getType());
+                fieldId.setAccessible(true);
+                if (generatedKeys.get(manyToOneField) != null) {
+                    fieldId.set(manyToOneInstance, generatedKeys.get(manyToOneField));
+                }
+                preparedStatement.setObject(++index, fieldId.get(manyToOneInstance));
+            }
+        } else {
+            for (int i = 0; i < psArgs.length; i++) {
+                preparedStatement.setObject(i + 1, psArgs[i]);
+            }
         }
 
-        for (Field manyToOneField : manyToOneFields) {
-            manyToOneField.setAccessible(true);
-            Object manyToOneInstance = manyToOneField.get(instance);
-            if (manyToOneInstance == null) {
-                continue;
-            }
-            Field fieldId = getIdField(manyToOneField.getType());
-            fieldId.setAccessible(true);
-            if (generatedKeys.get(manyToOneField) != null) {
-                fieldId.set(manyToOneInstance, generatedKeys.get(manyToOneField));
-            }
-            preparedStatement.setObject(++index, fieldId.get(manyToOneInstance));
-        }
+        System.out.println(sql);
 
         preparedStatement.executeUpdate();
         Integer generatedKey = null;
         ResultSet generatedKeyResultSet = null;
         if (database.equalsIgnoreCase("oracle")) {
-            preparedStatement = connection.prepareCall("SELECT " + ((Table) classe.getAnnotation(Table.class)).sequence() + ".CURRVAL FROM DUAL");
+            preparedStatement = connection.prepareCall(
+                    "SELECT " + ((Table) classe.getAnnotation(Table.class)).sequence() + ".CURRVAL FROM DUAL");
             generatedKeyResultSet = preparedStatement.executeQuery();
         } else {
             generatedKeyResultSet = preparedStatement.getGeneratedKeys();
         }
 
         if (generatedKeyResultSet.next()) {
-            generatedKey = ((BigDecimal) generatedKeyResultSet.getObject(1)).intValue();
+            try {
+                generatedKey = ((BigDecimal) generatedKeyResultSet.getObject(1)).intValue();
+            } catch (ClassCastException e) {
+                generatedKey = ((BigInteger) generatedKeyResultSet.getObject(1)).intValue();
+            }
             fieldHoldingId.setAccessible(true);
             fieldHoldingId.set(instance, generatedKey);
         }
@@ -295,10 +390,55 @@ public final class GenericDao {
 
         for (Field oneToManyField : oneToManyFields) {
             oneToManyField.setAccessible(true);
-            List list = (List) oneToManyField.get(instance);
+            List<?> list = (List<?>) oneToManyField.get(instance);
             if (list != null) {
                 for (Object object : list) {
-                    insert(connection, object);
+                    insert(connection, object, null, null);
+                }
+            }
+        }
+
+        for (Field manyToManyField : manyToManyFields) {
+            ParameterizedType genericType = (ParameterizedType) manyToManyField.getGenericType();
+            Class<?> genericTypeClass = (Class<?>) genericType.getActualTypeArguments()[0];
+            String joinTable = ((ManyToMany) manyToManyField.getAnnotation(ManyToMany.class)).joinTable();
+            String joinColumn = ((ManyToMany) manyToManyField.getAnnotation(ManyToMany.class)).joinColumn();
+            String inverseJoinColumn = ((ManyToMany) manyToManyField.getAnnotation(ManyToMany.class))
+                    .inverseJoinColumn();
+
+            Field mnyToManyFieldId = null;
+
+            for (Field field : getAllFields(genericTypeClass)) {
+                if (field.isAnnotationPresent(Id.class)) {
+                    mnyToManyFieldId = field;
+                    break;
+                }
+            }
+
+            if (mnyToManyFieldId == null) {
+                throw new RuntimeException("no Id found inside " + genericTypeClass);
+            }
+
+            manyToManyField.setAccessible(true);
+            mnyToManyFieldId.setAccessible(true);
+            fieldHoldingId.setAccessible(true);
+            List<?> list = (List<?>) manyToManyField.get(instance);
+            String manSql = "INSERT INTO " + joinTable + "(" + joinColumn + "," + inverseJoinColumn + ") VALUES (?, ?)";
+            Object[] prepArgs = new Object[2];
+            prepArgs[0] = fieldHoldingId.get(instance);
+            if (list != null) {
+                for (Object object : list) {
+                    // Check if object exists in db
+                    CriteriaBuilder tempCb = new CriteriaBuilder(genericTypeClass);
+                    tempCb.add(Restrictions.eq(getClassTableName(genericTypeClass, this.dbCharacter),
+                            getFieldNameInDatabase(mnyToManyFieldId, this.dbCharacter), mnyToManyFieldId.get(object)),
+                            LogicalOperator.NONE);
+                    if (select(connection, genericTypeClass, tempCb, null, null).isEmpty()) {
+                        prepArgs[1] = insert(connection, object, null, null);
+                    } else {
+                        prepArgs[1] = mnyToManyFieldId.get(object);
+                    }
+                    insert(connection, object, manSql, prepArgs);
                 }
             }
         }
@@ -306,13 +446,15 @@ public final class GenericDao {
         return generatedKey;
     }
 
-    public void insert(Object instance) throws SQLException, IllegalArgumentException, IllegalAccessException, InstantiationException, InvocationTargetException, NoSuchFieldException {
+    public void insert(Object instance) throws SQLException, IllegalArgumentException, IllegalAccessException,
+            InstantiationException, InvocationTargetException, NoSuchFieldException {
         Connection connection = getConnection();
         connection.setAutoCommit(false);
         try {
-            insert(connection, instance);
+            insert(connection, instance, null, null);
             connection.commit();
-        } catch (IllegalAccessException | IllegalArgumentException | InstantiationException | NoSuchFieldException | InvocationTargetException | SQLException e) {
+        } catch (IllegalAccessException | IllegalArgumentException | InstantiationException | NoSuchFieldException
+                | InvocationTargetException | SQLException e) {
             connection.rollback();
             throw e;
         } finally {
@@ -320,8 +462,9 @@ public final class GenericDao {
         }
     }
 
-    private void update(Connection connection, Object instance) throws SQLException, IllegalArgumentException, IllegalAccessException {
-        Class classe = instance.getClass();
+    private void update(Connection connection, Object instance)
+            throws SQLException, IllegalArgumentException, IllegalAccessException {
+        Class<?> classe = instance.getClass();
 
         String tableName = getClassTableName(classe, this.dbCharacter);
 
@@ -342,7 +485,8 @@ public final class GenericDao {
             if (field.isAnnotationPresent(ManyToOne.class)) {
                 manyToOneFields.add(field);
             }
-            if (!field.isAnnotationPresent(Transient.class) && !field.isAnnotationPresent(OneToMany.class) && !field.isAnnotationPresent(ManyToOne.class)) {
+            if (!field.isAnnotationPresent(Transient.class) && !field.isAnnotationPresent(OneToMany.class)
+                    && !field.isAnnotationPresent(ManyToOne.class) && !field.isAnnotationPresent(ManyToMany.class)) {
                 syncFields.add(field);
             }
         }
@@ -371,14 +515,17 @@ public final class GenericDao {
         String idColumnName = getFieldNameInDatabase(fieldHoldingId, this.dbCharacter);
         sql += " WHERE " + idColumnName + " = ?";
 
-        
         System.out.println(sql);
         PreparedStatement preparedStatement = connection.prepareStatement(sql);
 
         int index = 1;
         for (Field syncField : syncFields) {
             syncField.setAccessible(true);
-            preparedStatement.setObject(index++, syncField.get(instance));
+            try {
+                preparedStatement.setObject(index++, syncField.get(instance));
+            } catch (SQLException e) {
+                throw e;
+            }
         }
 
         fieldHoldingId.setAccessible(true);
@@ -392,14 +539,14 @@ public final class GenericDao {
 
         for (Field oneToManyField : oneToManyFields) {
             oneToManyField.setAccessible(true);
-            List list = (List) oneToManyField.get(instance);
+            List<?> list = (List<?>) oneToManyField.get(instance);
             if (list != null) {
                 for (Object object : list) {
                     update(connection, object);
                 }
             }
         }
-        
+
     }
 
     public void update(Object instance) throws SQLException, IllegalArgumentException, IllegalAccessException {
@@ -416,23 +563,24 @@ public final class GenericDao {
         }
     }
 
-    public List getInCache(Class clazz) throws NotCachedException {
+    public List<?> getInCache(Class<?> clazz) throws NotCachedException {
         if (!clazz.isAnnotationPresent(Cache.class)) {
             throw new NotCachableException(clazz);
         }
-        List result = cache.get(clazz);
+        List<?> result = cache.get(clazz);
         if (result == null) {
             throw new NotCachedException(clazz);
         }
         return result;
     }
 
-    public void registerIntoCache(Class clazz) throws SQLException, InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException, NoSuchFieldException {
+    public void registerIntoCache(Class<?> clazz) throws SQLException, InstantiationException, IllegalAccessException,
+            IllegalArgumentException, InvocationTargetException, NoSuchFieldException {
         if (!clazz.isAnnotationPresent(Cache.class)) {
             throw new NotCachableException(clazz);
         }
         CriteriaBuilder cb = new CriteriaBuilder(clazz);
-        cache.put(clazz, select(getConnection(), clazz, cb));
+        cache.put(clazz, select(getConnection(), clazz, cb, null, null));
     }
 
     public GenericDao(String id) throws ParserConfigurationException, IOException, SAXException {
@@ -440,14 +588,14 @@ public final class GenericDao {
             GenericDao.jdbcFactory = new JdbcFactory();
         }
         if (cache == null) {
-            cache = new HashMap();
+            cache = new HashMap<Class<?>, List<?>>();
         }
 
         this.databaseId = id;
         setDatabaseSpecialCharacter();
     }
 
-    public CriteriaBuilder getCriteriaBuilder(Class clazz) {
+    public CriteriaBuilder getCriteriaBuilder(Class<?> clazz) {
         this.criteriaBuilder = new CriteriaBuilder(clazz);
         return this.criteriaBuilder;
     }
@@ -468,9 +616,15 @@ public final class GenericDao {
         return jdbcFactory.getConnection(databaseId);
     }
 
-    private List select(Connection connection, Class instanceClass, CriteriaBuilder criteriaBuilder) throws SQLException, InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException, NoSuchFieldException {
-        Class classe = instanceClass;
-        List result = new ArrayList();
+    /*
+     * @Param directJoinSql and @Param manyToManyParentClass are used inside
+     * ManyToMany logic otherwise its not used
+     */
+    private List<Object> select(Connection connection, Class<?> instanceClass, CriteriaBuilder criteriaBuilder,
+            String directJoinSql, Class<?> manyToManyParentClass) throws SQLException, InstantiationException,
+            IllegalAccessException, IllegalArgumentException, InvocationTargetException, NoSuchFieldException {
+        Class<?> classe = instanceClass;
+        List<Object> result = new ArrayList<Object>();
         String tableName = getClassTableName(classe, this.dbCharacter);
         String sql = "SELECT ";
 
@@ -490,6 +644,7 @@ public final class GenericDao {
         List<Field> oneToManyFields = new ArrayList<Field>();
         List<Field> manyToOneFields = new ArrayList<Field>();
         List<Field> syncFields = new ArrayList<Field>();
+        List<Field> manyToManyFields = new ArrayList<Field>();
         for (Field field : fields) {
             if (field.isAnnotationPresent(Id.class)) {
                 fieldHoldingId = field;
@@ -500,7 +655,11 @@ public final class GenericDao {
             if (field.isAnnotationPresent(ManyToOne.class)) {
                 manyToOneFields.add(field);
             }
-            if (!field.isAnnotationPresent(Transient.class) && !field.isAnnotationPresent(OneToMany.class) && !field.isAnnotationPresent(ManyToOne.class)) {
+            if (field.isAnnotationPresent(ManyToMany.class)) {
+                manyToManyFields.add(field);
+            }
+            if (!field.isAnnotationPresent(Transient.class) && !field.isAnnotationPresent(OneToMany.class)
+                    && !field.isAnnotationPresent(ManyToOne.class) && !field.isAnnotationPresent(ManyToMany.class)) {
                 syncFields.add(field);
             }
         }
@@ -509,12 +668,20 @@ public final class GenericDao {
             throw new RuntimeException("L'id de classe doit être annoté par @Id");
         }
 
-        String tableNameNotEscaped = classe.isAnnotationPresent(Table.class) ? ((Table) classe.getAnnotation(Table.class)).name() : classe.getSimpleName();
+        String tableNameNotEscaped = classe.isAnnotationPresent(Table.class)
+                ? ((Table) classe.getAnnotation(Table.class)).name()
+                : classe.getSimpleName();
 
         String sqlFieldName;
         for (int i = 0; i < syncFields.size(); i++) {
-            sqlFieldName = syncFields.get(i).isAnnotationPresent(Column.class) ? syncFields.get(i).getAnnotation(Column.class).name() : syncFields.get(i).getName();
-            sql += tableName + "." + sqlFieldName + " as " + this.dbCharacter + tableNameNotEscaped + "." + sqlFieldName + this.dbCharacter;
+            sqlFieldName = syncFields.get(i).isAnnotationPresent(Column.class)
+                    ? syncFields.get(i).getAnnotation(Column.class).name()
+                    : syncFields.get(i).getName();
+            if (syncFields.get(i).isAnnotationPresent(Id.class)) {
+                sql += "distinct ";
+            }
+            sql += tableName + "." + sqlFieldName + " as " + this.dbCharacter + tableNameNotEscaped + "." + sqlFieldName
+                    + this.dbCharacter;
             if (i < syncFields.size() - 1) {
                 sql += ", ";
             }
@@ -525,7 +692,7 @@ public final class GenericDao {
         }
 
         for (Field field : manyToOneFields) {
-            sql = getFieldSql(field.getType(), sql);
+            sql = getFieldSqlManyToOne(field.getType(), sql);
         }
 
         if (sql.charAt(sql.length() - 1) == ',') {
@@ -542,8 +709,13 @@ public final class GenericDao {
 
         sql += " FROM " + tableName;
 
+        if (directJoinSql != null && !directJoinSql.isEmpty()) {
+            sql += " " + directJoinSql;
+        }
+
         Map<String, InfoForLeftJoin> correspBetweenTableAndInfo = new HashMap<String, InfoForLeftJoin>();
-        correspBetweenTableAndInfo.put(tableName.replaceAll(this.dbCharacter, ""), new InfoForLeftJoin(classe, null, null, null));
+        correspBetweenTableAndInfo.put(tableName.replaceAll(this.dbCharacter, ""),
+                new InfoForLeftJoin(classe, null, null, null));
 
         StringBuilder sb = new StringBuilder(1000);
         sb.append(sql);
@@ -567,7 +739,8 @@ public final class GenericDao {
             } else if (database.equalsIgnoreCase("postgresql")) {
                 sql += " OFFSET " + ((page - 1) * nombreResultat) + " LIMIT " + nombreResultat;
             } else if (database.equalsIgnoreCase("oracle")) {
-                sql += ") WHERE rn BETWEEN " + ((page * nombreResultat) - nombreResultat + 1) + " AND " + (nombreResultat * page);
+                sql += ") WHERE rn BETWEEN " + ((page * nombreResultat) - nombreResultat + 1) + " AND "
+                        + (nombreResultat * page);
             } else {
                 throw new RuntimeException("Base de donnée non supportée");
             }
@@ -594,20 +767,32 @@ public final class GenericDao {
             Map<String, Set<String>> tablesInvolved = getTablesInvolvedAndItsFields(rsmd);
 
             while (resultSet.next()) {
+                // Create an instance and set its field for each table in tablesInvolved, and
+                // eventually set the parent field container as the instance is the parent
+                // field value
                 for (Map.Entry<String, Set<String>> entry : tablesInvolved.entrySet()) {
                     String table = entry.getKey();
+                    // Skip if Rownum
                     if (table.equalsIgnoreCase("RN")) {
                         continue;
                     }
                     InfoForLeftJoin matchingInfo = correspBetweenTableAndInfo.get(table);
                     int i = 0;
-                    Class currentClass = matchingInfo.getClazz();
+                    Class<?> currentClass = matchingInfo.getClazz();
+                    /**
+                     * Table => Instance | Set each Field for the instance
+                     */
                     for (String fieldName : entry.getValue()) {
                         if (i == 0) {
-                            matchingInfo.setInstance(currentClass.newInstance());
+                            try {
+                                matchingInfo.setInstance(currentClass.getDeclaredConstructor().newInstance());
+                            } catch (NoSuchMethodException e) {
+                                throw new RuntimeException("No default constructor found inside " + currentClass);
+                            }
                         }
                         Field matchingField = getFieldInsideClass(currentClass, fieldName);
                         matchingField.setAccessible(true);
+                        // objectFromDb represents a field value
                         Object objectFromDb = resultSet.getObject(table + "." + fieldName);
                         if (objectFromDb instanceof java.math.BigDecimal) {
                             String fieldTypeName = matchingField.getType().getSimpleName();
@@ -622,11 +807,18 @@ public final class GenericDao {
                         matchingField.set(matchingInfo.getInstance(), objectFromDb);
                         i++;
                     }
+                    // If current Instance has a parent container
                     Field fieldConteneur = matchingInfo.getFieldConteneur();
                     if (fieldConteneur != null) {
                         fieldConteneur.setAccessible(true);
                         String conteneurTableName = fieldConteneur.getDeclaringClass().getSimpleName();
-                        fieldConteneur.set(correspBetweenTableAndInfo.get(conteneurTableName).getInstance(), matchingInfo.getInstance());
+                        if (fieldConteneur.getDeclaringClass().isAnnotationPresent(Table.class)) {
+                            conteneurTableName = ((Table) fieldConteneur.getDeclaringClass().getAnnotation(Table.class))
+                                    .name();
+                        }
+
+                        fieldConteneur.set(correspBetweenTableAndInfo.get(conteneurTableName).getInstance(),
+                                matchingInfo.getInstance());
                     }
                 }
 
@@ -634,18 +826,56 @@ public final class GenericDao {
                     ParameterizedType genericType = (ParameterizedType) field.getGenericType();
                     Class<?> genericTypeClass = (Class<?>) genericType.getActualTypeArguments()[0];
                     CriteriaBuilder cb = new CriteriaBuilder(genericTypeClass);
-                    Field embeddedField = genericTypeClass.getDeclaredField(field.getAnnotation(OneToMany.class).mappedBy());
+                    System.out.println(genericTypeClass);
+                    Field embeddedField = genericTypeClass
+                            .getDeclaredField(field.getAnnotation(OneToMany.class).mappedBy());
                     fieldHoldingId.setAccessible(true);
                     String embeddedFieldTableName = getClassTableName(genericTypeClass, this.dbCharacter);
-                    cb.add(Restrictions.eq(embeddedFieldTableName, getFieldNameInDatabase(embeddedField, this.dbCharacter), fieldHoldingId.get(correspBetweenTableAndInfo.get(tableName).getInstance())), LogicalOperator.NONE);
-                    List list = select(connection, genericTypeClass, cb);
+                    // WHERE embeddedFieldTableName.getFieldNameInDatabase(embeddedField,
+                    // this.dbCharacter) =
+                    // fieldHoldingId.get(correspBetweenTableAndInfo.get(tableName).getInstance())
+                    cb.add(Restrictions.eq(embeddedFieldTableName,
+                            getFieldNameInDatabase(embeddedField, this.dbCharacter),
+                            fieldHoldingId.get(correspBetweenTableAndInfo.get(tableName).getInstance())),
+                            LogicalOperator.NONE);
+                    List<?> list = select(connection, genericTypeClass, cb, null, null);
                     field.setAccessible(true);
-                    field.set(correspBetweenTableAndInfo.get(tableName.replaceAll(this.dbCharacter, "")).getInstance(), list);
+                    field.set(correspBetweenTableAndInfo.get(tableName.replaceAll(this.dbCharacter, "")).getInstance(),
+                            list);
+                }
+
+                for (Field field : manyToManyFields) {
+                    ParameterizedType genericType = (ParameterizedType) field.getGenericType();
+                    Class<?> genericTypeClass = (Class<?>) genericType.getActualTypeArguments()[0];
+
+                    // Avoid infinite recursion
+                    if (genericTypeClass.equals(manyToManyParentClass)) {
+                        continue;
+                    }
+
+                    CriteriaBuilder cb = new CriteriaBuilder(genericTypeClass);
+                    String joinTable = ((ManyToMany) field.getAnnotation(ManyToMany.class)).joinTable();
+                    String joinColumn = ((ManyToMany) field.getAnnotation(ManyToMany.class)).joinColumn();
+                    String inverseJoinColumn = ((ManyToMany) field.getAnnotation(ManyToMany.class)).inverseJoinColumn();
+
+                    fieldHoldingId.setAccessible(true);
+                    cb.add(Restrictions.eq(joinTable, joinColumn,
+                            fieldHoldingId.get(correspBetweenTableAndInfo.get(tableName).getInstance())),
+                            LogicalOperator.NONE);
+
+                    directJoinSql = "JOIN " + this.dbCharacter + joinTable + this.dbCharacter + " ON "
+                            + this.dbCharacter + joinTable + this.dbCharacter + "." + this.dbCharacter
+                            + inverseJoinColumn + this.dbCharacter;
+                    List<?> list = select(connection, genericTypeClass, cb, directJoinSql, instanceClass);
+                    field.setAccessible(true);
+                    field.set(correspBetweenTableAndInfo.get(tableName.replaceAll(this.dbCharacter, "")).getInstance(),
+                            list);
                 }
 
                 result.add(correspBetweenTableAndInfo.get(tableName.replaceAll(this.dbCharacter, "")).getInstance());
             }
-        } catch (IllegalAccessException | IllegalArgumentException | InstantiationException | NoSuchFieldException | SecurityException | SQLException e) {
+        } catch (IllegalAccessException | IllegalArgumentException | InstantiationException | NoSuchFieldException
+                | SecurityException | SQLException e) {
             throw e;
         } finally {
             if (resultSet != null) {
@@ -659,7 +889,7 @@ public final class GenericDao {
         return result;
     }
 
-    private Field getFieldInsideClass(Class clazz, String searchName) {
+    private Field getFieldInsideClass(Class<?> clazz, String searchName) {
         String currentFieldName;
         for (Field f : getAllFields(clazz)) {
             currentFieldName = f.isAnnotationPresent(Column.class) ? f.getAnnotation(Column.class).name() : f.getName();
@@ -689,13 +919,17 @@ public final class GenericDao {
         return tableAndFieldNames;
     }
 
-    public List select() throws SQLException, InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException, NoSuchFieldException {
-        Class classe = criteriaBuilder.getClazz();
-        List result;
-        try (Connection connection = getConnection()) {
-            result = select(connection, classe, this.criteriaBuilder);
+    public List<?> select() throws InstantiationException, IllegalAccessException, IllegalArgumentException,
+            InvocationTargetException, NoSuchFieldException, SQLException {
+        Class<?> classe = criteriaBuilder.getClazz();
+        Connection c = getConnection();
+        try {
+            return select(c, classe, this.criteriaBuilder, null, null);
+        } catch (IllegalArgumentException e) {
+            throw e;
+        } finally {
+            c.close();
         }
-        return result;
     }
 
     private static List<Field> getAllFields(Class<?> type) {
@@ -706,39 +940,47 @@ public final class GenericDao {
         return fields;
     }
 
-    private String getFieldSql(Class clazz, String sql) {
+    private String getFieldSqlManyToOne(Class<?> clazz, String sql) {
         String tableName = getClassTableName(clazz, this.dbCharacter);
         for (Field field : getAllFields(clazz)) {
-            if (!field.isAnnotationPresent(Transient.class) && !field.isAnnotationPresent(OneToMany.class) && !field.isAnnotationPresent(ManyToOne.class)) {
+            if (!field.isAnnotationPresent(Transient.class) && !field.isAnnotationPresent(OneToMany.class)
+                    && !field.isAnnotationPresent(ManyToOne.class) && !field.isAnnotationPresent(ManyToMany.class)) {
                 String fieldName = getFieldNameInDatabase(field, this.dbCharacter);
-                sql += tableName + "." + fieldName + " as " + this.dbCharacter + tableName + "." + field.getName() + this.dbCharacter + ",";
+                sql += tableName + "." + fieldName + " as " + this.dbCharacter + tableName + "." + field.getName()
+                        + this.dbCharacter + ",";
             }
             if (field.isAnnotationPresent(ManyToOne.class)) {
-                sql = getFieldSql(field.getType(), sql);
+                sql = getFieldSqlManyToOne(field.getType(), sql);
             }
         }
         return sql;
     }
 
-    private StringBuilder getLeftJoinSql(Class clazz, StringBuilder sql, Map<String, InfoForLeftJoin> info) throws InstantiationException, IllegalAccessException {
+    private StringBuilder getLeftJoinSql(Class<?> clazz, StringBuilder sql, Map<String, InfoForLeftJoin> info)
+            throws InstantiationException, IllegalAccessException {
         String manyToOneTableName;
         String tableName = getClassTableName(clazz, this.dbCharacter);
-        for (Field field : getAllFields(clazz)) {
+        List<Field> allFields = getAllFields(clazz);
+
+        for (Field field : allFields) {
             if (field.isAnnotationPresent(ManyToOne.class)) {
                 InfoForLeftJoin temp = new InfoForLeftJoin(field.getType(), null, null, field);
                 manyToOneTableName = getClassTableName(field.getType(), this.dbCharacter);
                 info.put(manyToOneTableName, temp);
                 if (!field.isAnnotationPresent(JoinColumn.class)) {
-                    throw new RuntimeException("Vous avez oublié d'annoter l'attribut " + field.getName() + " de la classe " + clazz + " avec @JoinColumn");
+                    throw new RuntimeException("Vous avez oublié d'annoter l'attribut " + field.getName()
+                            + " de la classe " + clazz + " avec @JoinColumn");
                 }
                 String fieldName = getFieldNameInDatabase(field, this.dbCharacter);
-                sql.append(" LEFT JOIN ").append(manyToOneTableName).append(" ON ").append(tableName).append(".").append(fieldName).append(" = ").append(manyToOneTableName).append(".");
+                sql.append(" LEFT JOIN ").append(manyToOneTableName).append(" ON ").append(tableName).append(".")
+                        .append(fieldName).append(" = ").append(manyToOneTableName).append(".");
                 for (Field subField : getAllFields(field.getType())) {
                     if (subField.isAnnotationPresent(Id.class)) {
                         String subFieldName = getFieldNameInDatabase(subField, this.dbCharacter);
                         sql.append(subFieldName);
                     }
-                    if (subField.isAnnotationPresent(JoinColumn.class) || subField.isAnnotationPresent(ManyToOne.class)) {
+                    if (subField.isAnnotationPresent(JoinColumn.class)
+                            || subField.isAnnotationPresent(ManyToOne.class)) {
                         getLeftJoinSql(field.getType(), sql, info);
                     }
                 }
